fixed alignment of all playlist cards

--- a/react-app/src/components/AllPlaylist/AllPlaylist.css
+++ b/react-app/src/components/AllPlaylist/AllPlaylist.css
@@ -22,15 +22,15 @@
 }
 
 .PL-Div {
-  margin-left: 40px;
-  /* padding-left: 5px; */
+  margin-left:0;
+  display: flex;
+  flex-direction: column;
+  margin: 0px 10px 0px 10px;
 }
 
 .PL-Title {
   color: white;
   font-size: 10.5px;
-  /* padding-left: 5px; */
-  /* max-width: 65%; */
 }
 
 .PL-CoverImg {
@@ -41,7 +41,6 @@
   height: 225px;
   width: 225px;
   border-radius: 10px;
-  /* padding-bottom: 5px; */
   transition: .2s ease-in;
 }
 
@@ -62,8 +61,6 @@
 
 .icons-sec {
   padding-top: 5px;
-  /* margin-left: 20px; */
-  /* min-width: 5%; */
 }
 
 #PL-icon-heart {
@@ -103,24 +100,26 @@
   .PL-Card-Wrapper {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    
     flex-wrap: wrap;
     align-self: center;
+    align-items: center;
     justify-content: center;
   }
 
-  .PL-Section {}
+  .PL-Section {
+  }
 
   .PL-Div {
-
-    /* padding-left: 5px; */
+    margin-left:0;
+    display: flex;
+    flex-direction: column;
+    margin: 0px 10px 0px 10px;
   }
 
   .PL-Title {
     color: white;
     font-size: 10.5px;
-    /* padding-left: 5px; */
-    /* max-width: 65%; */
   }
 
   .PL-CoverImg {
@@ -131,7 +130,6 @@
     height: 225px;
     width: 225px;
     border-radius: 10px;
-    /* padding-bottom: 5px; */
     transition: .2s ease-in;
   }
 
@@ -152,14 +150,11 @@
 
   .icons-sec {
     padding-top: 5px;
-    /* margin-left: 20px; */
-    /* min-width: 5%; */
   }
 
   #PL-icon-heart {
     display: inline-flex;
     color: rgb(226 96 106);
-    /* padding-left: 15px; */
     padding-right: 10px;
     padding-top: 8px;
 
