--- a/react-app/src/components/ExploreGenre/ExploreGenre.css
+++ b/react-app/src/components/ExploreGenre/ExploreGenre.css
@@ -10,7 +10,7 @@
   .EG-Body {
     z-index: -1;
     height: calc(100%+20px);
-    padding-top: 30px;
+    padding-top: 100px;
     padding-left: 15px;
     padding-right: 15px;
   }
